remove symlink stuff from kitty

--- a/roles/kitty/tasks/main.yml
+++ b/roles/kitty/tasks/main.yml
@@ -6,13 +6,13 @@
     name: kitty
     state: present
 
-- name: Create kitty config dir if needed
-  file:
-    path: "{{ lookup('env', 'HOME') }}/.config/kitty"
-    state: directory
-
-- name: Symlink kitty config
-  file:
-    src: "{{ dotfiles_home }}/roles/kitty/kitty.conf"
-    dest: "{{ lookup('env', 'HOME') }}/.config/kitty/kitty.conf"
-    state: link
+# - name: Create kitty config dir if needed
+#   file:
+#     path: "{{ lookup('env', 'HOME') }}/.config/kitty"
+#     state: directory
+#
+# - name: Symlink kitty config
+#   file:
+#     src: "{{ dotfiles_home }}/roles/kitty/kitty.conf"
+#     dest: "{{ lookup('env', 'HOME') }}/.config/kitty/kitty.conf"
+#     state: link
