--- a/roles/kitty/kitty.conf
+++ b/roles/kitty/kitty.conf
@@ -6,7 +6,8 @@ shell_integration no-cursor
 
 # window_padding_width 10
 
-font_family JetBrains Mono
+# font_family JetBrains Mono
+font_family Comic Code
 font_size 13
 # font_family Iosevka Fixed
 # bold_font Iosevka Fixed
